{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 73,
  "lineage": "13726f0e-497f-efe7-68c2-c0abac019b79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_db_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with RDS database",
            "from_port": 5432,
            "id": "sgrule-4212565227",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-053cff7fb4d81f43e",
            "security_group_rule_id": "sgr-034592828db47f58e",
            "self": false,
            "source_security_group_id": "sg-0ca7cd24176cb9417",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_security_group.rds_db_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:security-group/sg-0ca7cd24176cb9417",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca7cd24176cb9417",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2132f87e4bc3b3c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "punjab-prod-fsm-eks20230804083442130800000001",
            "name_prefix": "punjab-prod-fsm-eks",
            "owner_id": "023860687624",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "punjab-prod-fsm-eks-eks_cluster_sg",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "punjab-prod-fsm-eks-eks_cluster_sg",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:security-group/sg-0e2132f87e4bc3b3c",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2132f87e4bc3b3c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca7cd24176cb9417"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca7cd24176cb9417"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "punjab-prod-fsm-eks20230804083442132600000002",
            "name_prefix": "punjab-prod-fsm-eks",
            "owner_id": "023860687624",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "punjab-prod-fsm-eks-eks_worker_sg",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "punjab-prod-fsm-eks-eks_worker_sg",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2896120512",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ca7cd24176cb9417",
            "security_group_rule_id": "sgr-0a7a17727a45b70a9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3196275432",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ca7cd24176cb9417",
            "security_group_rule_id": "sgr-081c8d7e734665a84",
            "self": false,
            "source_security_group_id": "sg-0e2132f87e4bc3b3c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2285478766",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e2132f87e4bc3b3c",
            "security_group_rule_id": "sgr-0b3bb55eb2eba5251",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1307158282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2132f87e4bc3b3c",
            "security_group_rule_id": "sgr-0308abf4c00e9c01b",
            "self": false,
            "source_security_group_id": "sg-0ca7cd24176cb9417",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2083619425",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2132f87e4bc3b3c",
            "security_group_rule_id": "sgr-0f14ef29a7439ed36",
            "self": false,
            "source_security_group_id": "sg-0ca7cd24176cb9417",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-319211073",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e2132f87e4bc3b3c",
            "security_group_rule_id": "sgr-002c5cc3ac5b3a1a7",
            "self": false,
            "source_security_group_id": "sg-0e2132f87e4bc3b3c",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0265448ac8ba5a52b",
            "association_id": "eipassoc-07bbaeb18b0e80d14",
            "domain": "vpc",
            "id": "eipalloc-0265448ac8ba5a52b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-031eaa054d3201f6c",
            "private_dns": "ip-192-168-2-199.ap-south-1.compute.internal",
            "private_ip": "192.168.2.199",
            "public_dns": "ec2-13-232-96-71.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.96.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "eip-punjab-prod-fsm-eks",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "eip-punjab-prod-fsm-eks",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:internet-gateway/igw-0c21a3dab15aadf2f",
            "id": "igw-0c21a3dab15aadf2f",
            "owner_id": "023860687624",
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "punjab-prod-fsm-eks",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "punjab-prod-fsm-eks",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0265448ac8ba5a52b",
            "association_id": "eipassoc-07bbaeb18b0e80d14",
            "connectivity_type": "public",
            "id": "nat-0c7f2b342fd734bff",
            "network_interface_id": "eni-031eaa054d3201f6c",
            "private_ip": "192.168.2.199",
            "public_ip": "13.232.96.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-070c5419e3946c898",
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "nat-gw-punjab-prod-fsm-eks",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "nat-gw-punjab-prod-fsm-eks",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:route-table/rtb-0e7d174bdf4e4136d",
            "id": "rtb-0e7d174bdf4e4136d",
            "owner_id": "023860687624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7f2b342fd734bff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "private-punjab-prod-fsm-eks-rtb",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "private-punjab-prod-fsm-eks-rtb",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:route-table/rtb-0baaac88c5bbf7e8c",
            "id": "rtb-0baaac88c5bbf7e8c",
            "owner_id": "023860687624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c21a3dab15aadf2f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "public-punjab-prod-fsm-eks-rtb",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "public-punjab-prod-fsm-eks-rtb",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059395b56296396ad",
            "route_table_id": "rtb-0e7d174bdf4e4136d",
            "subnet_id": "subnet-059d4c258f5f830e7"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b29ab2e60d73eaae",
            "route_table_id": "rtb-0e7d174bdf4e4136d",
            "subnet_id": "subnet-05609e9d151f73e1b"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5e68db0eb0b7fb5",
            "route_table_id": "rtb-0baaac88c5bbf7e8c",
            "subnet_id": "subnet-070c5419e3946c898"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006302057e1118d87",
            "route_table_id": "rtb-0baaac88c5bbf7e8c",
            "subnet_id": "subnet-0bace6652807f6578"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:security-group/sg-053cff7fb4d81f43e",
            "description": "RDS Database security group",
            "egress": [],
            "id": "sg-053cff7fb4d81f43e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with RDS database",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca7cd24176cb9417"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-punjab-prod-fsm-eks",
            "name_prefix": "",
            "owner_id": "023860687624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-punjab-prod-fsm-eks"
            },
            "tags_all": {
              "Name": "db-punjab-prod-fsm-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:subnet/subnet-059d4c258f5f830e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059d4c258f5f830e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023860687624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "ap-south-1b-punjab-prod-fsm-eks",
              "SubnetType": "Private",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "ap-south-1b-punjab-prod-fsm-eks",
              "SubnetType": "Private",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:subnet/subnet-05609e9d151f73e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05609e9d151f73e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023860687624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "ap-south-1a-punjab-prod-fsm-eks",
              "SubnetType": "Private",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "ap-south-1a-punjab-prod-fsm-eks",
              "SubnetType": "Private",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:subnet/subnet-070c5419e3946c898",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070c5419e3946c898",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023860687624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "utility-ap-south-1b-punjab-prod-fsm-eks",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "utility-ap-south-1b-punjab-prod-fsm-eks",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:subnet/subnet-0bace6652807f6578",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bace6652807f6578",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023860687624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "utility-ap-south-1a-punjab-prod-fsm-eks",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "punjab-prod-fsm-eks",
              "Name": "utility-ap-south-1a-punjab-prod-fsm-eks",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-094e5140bca95a452"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023860687624:vpc/vpc-094e5140bca95a452",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07d03744e743564dc",
            "default_route_table_id": "rtb-02899dfccfa2a244c",
            "default_security_group_id": "sg-0f55cc3910d0fb924",
            "dhcp_options_id": "dopt-80e6fae8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094e5140bca95a452",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02899dfccfa2a244c",
            "owner_id": "023860687624",
            "tags": {
              "Name": "punjab-prod-fsm-eks",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            },
            "tags_all": {
              "Name": "punjab-prod-fsm-eks",
              "kubernetes.io/cluster/punjab-prod-fsm-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}